# python-nix

./: .gitignore  LICENSE  README.md  example.py  flake.nix  nixos-option.py  package.nix  pyproject.toml  setup.py
docs/: conf.py  index.rst  nix.expr.rst  nix.expr_util.rst  nix.external.rst  nix.rst  nix.store.rst  nix.util.rst
examples/: b64.py  example.py  pkg.py  plugin.c  plugin_entry.py
src/: buildFFI.py
src/nix/: __init__.py  _nix_api_expr.pyi  _nix_api_types.pyi  expr.py  expr_util.py  external.py  store.py  util.py  wrap.py
